feat: initialize project structure with frontend application and backend core services